UserServiceApplication, connects to postgres thru posotman, status 200 on GET http://localhost:8080/api/user/1